# PurpleRain

./: .gitignore  CMakeLists.txt
scenes/: scene1.scn  scene10.scn  scene2.scn  scene3.scn  scene4.scn  scene5.scn  scene6.scn  scene8.scn
source/headers/: GameLoop.h  Rect.h  Scene.h  TextBox.h  main.h
source/src/: GameLoop.cpp  Rect.cpp  Scene.cpp  TextBox.cpp  main.cpp
